...
                    });
                  },
                  children: [
                    _buildPage(
                      context,
                      icon: Icons.calendar_view_month,
                      title: 'Schedule & Filter',
                      description:
                          'Easily manage your Trips and Tickets in one unified schedule.',
                    ),
                    _buildPage(
                      context,
                      icon: Icons.notifications_active_outlined,
...
                            onPressed: () {
                              _pageController.nextPage(
                                duration: const Duration(milliseconds: 300),
                                curve: Curves.easeInOut,
                              );
                            },
                            child: const Text('Next'),
                          ),
                  ],
                ),
              ),
            ],
          ),
...
